<resources>
    <string name="app_name">examen_practico_android_marcos_narvaez</string>
    <string name="nombreTitulo">nombre:</string>
    <string name="edadTitulo">edad: </string>
    <string name="nssTitulo">NSS: </string>
    <string name="generoTitulo">Genero: </string>
    <string name="pesoTitulo">peso en kg: </string>
    <string name="estaturaTitulo">estatura en cm: </string>
    <string name="save">Guardar</string>
    <string name="add_persona">Añadir persona</string>
    <string name="needData">Complete todos los campos</string>
    <string name="personaSaved">Persona guardada</string>
    <string name="personaNotSaved">Persona no guardada</string>
    <string name="database">Base de datos</string>

    <string-array name="gender_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

</resources>