<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/editTex_paddin"
    tools:context=".add_persona">

    <EditText
        android:id="@+id/EditText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreTitulo"
        android:inputType="text"/>

    <EditText
        android:id="@+id/EditText_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edadTitulo"
        android:inputType="number"/>

    <TextView
        android:id="@+id/TextView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generoTitulo" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/EditText_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pesoTitulo"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/EditText_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/estaturaTitulo"
        android:inputType="numberDecimal"/>

</LinearLayout>