<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/marginItemCard"
    android:layout_marginTop="@dimen/marginItemCard"
    android:layout_marginRight="@dimen/marginItemCard">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingGlobal">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="marcos narvaez aldana"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text_view_name"
            android:layout_toLeftOf="@id/text_view_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/nombreTitulo"/>

        <TextView
            android:id="@+id/text_view_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_view_name"
            android:text="34"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_title_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text_view_age"
            android:layout_toLeftOf="@id/text_view_age"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_title_name"
            android:text="@string/edadTitulo"/>

        <TextView
            android:id="@+id/text_view_nss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_view_age"
            android:text="000055rrrr555000"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_title_nss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text_view_nss"
            android:layout_toLeftOf="@id/text_view_nss"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_title_age"
            android:text="@string/nssTitulo"/>

        <TextView
            android:id="@+id/text_view_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_view_nss"
            android:text="masculino"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_title_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text_view_gender"
            android:layout_toLeftOf="@id/text_view_gender"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_title_nss"
            android:text="@string/generoTitulo"/>

        <TextView
            android:id="@+id/text_view_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_view_gender"
            android:text="85"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_title_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text_view_weight"
            android:layout_toLeftOf="@id/text_view_weight"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_title_gender"
            android:text="@string/pesoTitulo"/>


        <TextView
            android:id="@+id/text_view_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_view_weight"
            android:text="170"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_title_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/text_view_height"
            android:layout_toLeftOf="@id/text_view_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_view_title_weight"
            android:text="@string/estaturaTitulo"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>